Serve generated files over HTTP